[package]
name = "hash-lexer"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-token = { workspace = true }
hash-target = { workspace = true }
hash-utils = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
