[package]
name = "hash-link"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
cc = { workspace = true }
libc = { workspace = true }

hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-utils = { workspace = true }
hash-target = { workspace = true }
