[package]
name = "hash-lower"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
fixedbitset = "0.4.2"
indexmap = "1.9"
num-traits = "0.2.15"
derive_more = "0.99"

hash-ast = { path = "../hash-ast" }
hash-intrinsics = { path = "../hash-intrinsics" }
hash-ir = { path = "../hash-ir" }
hash-layout = { path = "../hash-layout" }
hash-pipeline = { path = "../hash-pipeline" }
hash-reporting = { path = "../hash-reporting" }
hash-semantics = { path = "../hash-semantics" }
hash-source = { path = "../hash-source" }
hash-storage = { path = "../hash-storage" }
hash-target = { path = "../hash-target" }
hash-tir = { path = "../hash-tir" }
hash-tree-def = { path = "../hash-tree-def" }
hash-utils = { path = "../hash-utils" }
