[package]
name = "hash-lower"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
fixedbitset = { workspace = true }
num-traits = { workspace = true }

hash-ast = { workspace = true }
hash-attrs = { workspace = true }
hash-const-eval = { workspace = true }
hash-ir = { workspace = true }
hash-ir-utils = { workspace = true }
hash-repr = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-semantics = { workspace = true }
hash-source = { workspace = true }
hash-storage = { workspace = true }
hash-target = { workspace = true }
hash-typecheck = { workspace = true }
hash-tir = { workspace = true }
hash-tir-utils = { workspace = true }
hash-tree-def = { workspace = true }
hash-utils = { workspace = true }
