[package]
name = "hash-messaging"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
hash-reporting = {path = "../hash-reporting" }
hash-utils = {path = "../hash-utils" }

# perhaps this isn't ideal to put here?
hash-pipeline = {path = "../hash-pipeline" }
