[package]
name = "hash-messaging"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
hash-reporting = { workspace = true }
hash-utils = { workspace = true }

# perhaps this isn't ideal to put here?
hash-pipeline = { workspace = true }
