[package]
name = "hash-parser"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.1"
derive_more = "0.99"
num-bigint = "0.4"
rayon = "1.5.0"

# For profiling the parser
profiling = "1.0"

hash-ast = {path = "../hash-ast" }
hash-lexer = {path = "../hash-lexer" }
hash-pipeline = {path = "../hash-pipeline"}
hash-reporting = {path = "../hash-reporting"}
hash-source = {path = "../hash-source" }
hash-token = {path = "../hash-token" }
hash-utils = {path = "../hash-utils" }
