[package]
name = "hash-parser"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
num-bigint = "0.4"

# For profiling the parser
profiling = "1.0"

hash-ast = {path = "../hash-ast" }
hash-lexer = {path = "../hash-lexer" }
hash-pipeline = {path = "../hash-pipeline"}
hash-reporting = {path = "../hash-reporting"}
hash-source = {path = "../hash-source" }
hash-token = {path = "../hash-token" }
hash-utils = {path = "../hash-utils" }
hash-target = {path = "../hash-target"}
