[package]
name = "hash-parser"
version = "0.1.0"
authors = ["The Hash Language authors"]
edition = "2021"

[lib]
doctest = false

[dependencies]
# For profiling the parser
profiling = { workspace = true}

hash-ast = { workspace = true }
hash-lexer = { workspace = true }
hash-pipeline = { workspace = true }
hash-reporting = { workspace = true }
hash-source = { workspace = true }
hash-token = { workspace = true }
hash-utils = { workspace = true }
hash-target = { workspace = true }
